--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,10 @@
 
   {%- seo -%}
   {%- feed_meta -%}
-
+  
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
+  
   {%- include custom-head.html -%}
 </head>
